--- a/_portfolio/birthplacemap.html
+++ b/_portfolio/birthplacemap.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学生出生地地图</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>学生出生地地图（带聚合统计）</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="styles.css"> <!-- 可选样式 -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
     <style>
-        /* 设置地图容器的高度 */
         #map {
-            height: 500px;
+            height: 600px;
             width: 100%;
+        }
+
+        #marker-count {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background: rgba(255,255,255,0.9);
+            padding: 6px 10px;
+            border-radius: 4px;
+            font-weight: bold;
+            box-shadow: 0 0 5px rgba(0,0,0,0.3);
         }
     </style>
 </head>
 <body>
-    <h1>学生出生地地图</h1>
+    <h1>学生出生地地图（带聚合统计）</h1>
     <div id="map"></div>
+    <div id="marker-count">标记数目：0</div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script>
-        // 初始化地图
-        const map = L.map('map').setView([35, 105], 4); // 设置初始视角
+        const map = L.map('map').setView([33, 110], 5);
 
-        // 添加地图图层
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
+            maxZoom: 18,
         }).addTo(map);
 
-        // 加载学生数据
+        const markers = L.markerClusterGroup();
+
         fetch('students.json')
-            .then(response => response.json())
-            .then(data => {
-                data.forEach(student => {
-                    // 添加标记
-                    L.marker(student.coordinates)
-                        .addTo(map)
-                        .bindPopup(`<b>${student.name}</b><br>${student.birthplace}`);
-                });
+            .then(response => {
+                if (!response.ok) throw new Error('网络响应失败');
+                return response.json();
             })
-            .catch(error => console.error('加载学生数据时出错:', error));
+            .then(data => {
+                if (!Array.isArray(data) || data.length === 0) {
+                    alert('学生数据为空或格式不正确');
+                    return;
+                }
+
+                data.forEach(student => {
+                    // 确保坐标是数组且有两个数字
+                    if (Array.isArray(student.coordinates) && student.coordinates.length === 2) {
+                        const marker = L.marker(student.coordinates)
+                            .bindPopup(`<b>${student.name}</b><br>${student.birthplace}`);
+                        markers.addLayer(marker);
+                    }
+                });
+
+                map.addLayer(markers);
+                document.getElementById('marker-count').textContent = `标记数目：${data.length}`;
+            })
+            .catch(error => {
+                console.error('加载学生数据时出错:', error);
+                alert('加载学生数据失败，请检查控制台');
+            });
     </script>
 </body>
 </html>
