--- a/workplacemap/workplacemap.html
+++ b/workplacemap/workplacemap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>学生出生地地图（聚合统计）</title>
+    <title>毕业学生工作地地图（聚合统计）</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1>学生出生地地图（聚合统计）</h1>
+    <h1>毕业学生工作地地图（聚合统计）</h1>
     <div id="map"></div>
     <div id="marker-count">标记数目：0</div>
 
@@ -49,7 +49,7 @@
             })
             .then(data => {
                 if (!Array.isArray(data) || data.length === 0) {
-                    alert('学生数据为空或格式不正确');
+                    alert('毕业生数据为空或格式不正确');
                     return;
                 }
 
@@ -66,8 +66,8 @@
                 document.getElementById('marker-count').textContent = `标记数目：${data.length}`;
             })
             .catch(error => {
-                console.error('加载学生数据时出错:', error);
-                alert('加载学生数据失败，请检查控制台');
+                console.error('加载毕业生数据时出错:', error);
+                alert('加载毕业生数据失败，请检查控制台');
             });
     </script>
 </body>
